# simple_opencv

./: .gitmodules  CMakeLists.txt  README.md  makefile
include/: App.hpp  Exception.hpp  Texture.hpp  Tracker.hpp  Window.hpp
src/: App.cpp  Texture.cpp  Tracker.cpp  Window.cpp  main.cpp
